# interactive-feedback-mcp

./: feedback_ui.py  pyproject.toml  server.py
.github/workflows/: ci.yml
if_ui/: __init__.py  helpers.py  main.py  theme.py  widgets.py
