[project]
name = "interactive-feedback-mcp"
version = "0.1.5"
description = "MCP server for interactive user feedback and command execution in AI-assisted development, by Fábio Ferreira and Pau Oliva."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.5.1",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
    "markdown>=3.4.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
